[Sheriffing] Disable AppShimInteractiveTest.Launch (mac) due to flakiness.

Tbr: ccameron@chromium.org
Bug: 913490
Change-Id: I90fabcfe3bba129fbe2786738c3757526b423a6f
Reviewed-on: https://chromium-review.googlesource.com/c/1369721
Commit-Queue: Samuel Huang <huangs@chromium.org>
Reviewed-by: Samuel Huang <huangs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615159}
Former-commit-id: 0c873bf2265189967d77b2cbccee70cfd14e9db9